--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-less": "~0.11.0",
+    "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-livereload": "^0.1.2",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.6.1",
